--- a/changelog
+++ b/changelog
@@ -6,6 +6,30 @@ Maintainer(s):	cage
 
 	DD/MM/YY
 
+	18/08/2020
+
+	[cage]
+
+	- Cleaned sources;
+	- improved tests progress output appereance in CCL and ABCL;
+	- added the variable *test-output-stream*; the value must be an output
+	  stream (default *standard-output*) where  all the tests results will
+          be printed.
+	- removing percetages for cumulative tests results
+	  Rounding of  percentage can give,  for example, 100%  of passed
+	  tests  when actually  a  few failed  or resulted  in  one or  more
+	  errors;
+	- added the variable *test-output-stream*; the value must be an output
+	  stream (default *standard-output*) where  all the tests results will
+	  be printed.
+
+	[jgodbout]
+
+	- Fix documentation xml  file, adding conditions and documentation
+	for run-suite-conditiion signal
+        - Tabbify changelog
+	- Switch the output of test suite information with signal
+
 	02/08/2020
 	Added a signal for test run failure. [jgodbout]
 
