--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+2021-08-21  cage
+
+        * src/macros/assertion-macros.lisp:
+
+	- fixed assertion test: 'assert-equality*'.
+
 2021-06-12  cage
 
         * src/classes/clunit-test-report.lisp,
